--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,2 +1,6 @@
 @import "content";
 //todo: add autoprefix
+
+body {
+  margin: 0;
+}
